--- a/package.json
+++ b/package.json
@@ -1,19 +1,38 @@
 {
-  "name": "com-utility-func",
-  "version": "1.0.0",
-  "description": "common utility functions for javascript",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Z1hgq/com-utility-func.git"
-  },
-  "author": "Z1hgq",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/Z1hgq/com-utility-func/issues"
-  },
-  "homepage": "https://github.com/Z1hgq/com-utility-func#readme"
+    "name": "smutils",
+    "version": "1.0.0",
+    "description": "common utility functions for javascript",
+    "main": "index.js",
+    "dependencies": {
+        "babel-cli": "^6.26.0",
+        "babel-core": "^6.26.3",
+        "babel-loader": "^8.0.6",
+        "babel-preset-env": "^1.7.0",
+        "babel-preset-es2015": "^6.24.1"
+    },
+    "devDependencies": {
+        "babel-eslint": "^7.2.3",
+        "babel-plugin-import": "^1.12.1",
+        "eslint": "^6.7.2",
+        "eslint-config-prettier": "^6.5.0",
+        "eslint-plugin-import": "^2.20.0",
+        "eslint-plugin-prettier": "^3.1.1",
+        "eslint-plugin-react": "^7.16.0",
+        "prettier": "^1.18.2",
+        "prettier-eslint": "^9.0.0"
+    },
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "babel": "babel-node index.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/Z1hgq/smutils.git"
+    },
+    "author": "Z1hgq",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/Z1hgq/smutils/issues"
+    },
+    "homepage": "https://github.com/Z1hgq/smutils#readme"
 }
