--- a/package.json
+++ b/package.json
@@ -3,13 +3,7 @@
     "version": "1.0.0",
     "description": "common utility functions for javascript",
     "main": "index.js",
-    "dependencies": {
-        "babel-cli": "^6.26.0",
-        "babel-core": "^6.26.3",
-        "babel-loader": "^8.0.6",
-        "babel-preset-env": "^1.7.0",
-        "babel-preset-es2015": "^6.24.1"
-    },
+    "dependencies": {},
     "devDependencies": {
         "babel-eslint": "^7.2.3",
         "babel-plugin-import": "^1.12.1",
@@ -19,10 +13,30 @@
         "eslint-plugin-prettier": "^3.1.1",
         "eslint-plugin-react": "^7.16.0",
         "prettier": "^1.18.2",
-        "prettier-eslint": "^9.0.0"
+        "prettier-eslint": "^9.0.0",
+        "babel-core": "^6.26.3",
+        "babel-loader": "^7.1.5",
+        "babel-preset-env": "^1.7.0",
+        "chalk": "^2.4.1",
+        "copy": "^0.3.2",
+        "coveralls": "^3.0.2",
+        "karma": "^2.0.4",
+        "karma-chrome-launcher": "^2.2.0",
+        "karma-coverage": "^1.1.2",
+        "karma-mocha": "^1.3.0",
+        "karma-mocha-reporter": "^2.2.5",
+        "karma-power-assert": "^1.0.0",
+        "mocha": "^5.2.0",
+        "ora": "^3.0.0",
+        "power-assert": "^1.6.0",
+        "rimraf": "^2.6.2",
+        "webpack": "^4.16.1"
     },
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
+        "build": "node script/build.js",
+        "build-copy": "node script/build-copy.js",
+        "build-pack": "node script/build-pack",
+        "test": "npm run build-pack && karma start script/karma.conf.js",
         "babel": "babel-node index.js"
     },
     "repository": {
