--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "smutils",
     "version": "1.0.0",
     "description": "common utility functions for javascript",
-    "main": "index.js",
+    "main": "min/smutils.min.js",
     "dependencies": {},
     "devDependencies": {
         "babel-eslint": "^7.2.3",
@@ -20,23 +20,18 @@
         "chalk": "^2.4.1",
         "copy": "^0.3.2",
         "coveralls": "^3.0.2",
-        "karma": "^2.0.4",
-        "karma-chrome-launcher": "^2.2.0",
-        "karma-coverage": "^1.1.2",
-        "karma-mocha": "^1.3.0",
-        "karma-mocha-reporter": "^2.2.5",
-        "karma-power-assert": "^1.0.0",
         "mocha": "^5.2.0",
         "ora": "^3.0.0",
         "power-assert": "^1.6.0",
         "rimraf": "^2.6.2",
-        "webpack": "^4.16.1"
+        "webpack": "^4.16.1",
+        "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2"
     },
     "scripts": {
         "build": "node script/build.js",
         "build-copy": "node script/build-copy.js",
         "build-pack": "node script/build-pack",
-        "test": "npm run build-pack && karma start script/karma.conf.js",
+        "test": "",
         "babel": "babel-node index.js"
     },
     "repository": {
