--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@gq/gqutils",
+    "name": "@z1hgq/gqutils",
     "version": "1.0.0",
     "description": "common utility functions for javascript",
     "main": "min/gqutils.min.js",
@@ -34,12 +34,12 @@
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/Z1hgq/smutils.git"
+        "url": "git+https://github.com/Z1hgq/gqutils.git"
     },
     "author": "Z1hgq",
     "license": "MIT",
     "bugs": {
-        "url": "https://github.com/Z1hgq/smutils/issues"
+        "url": "https://github.com/Z1hgq/gqutils/issues"
     },
-    "homepage": "https://github.com/Z1hgq/smutils#readme"
+    "homepage": "https://github.com/Z1hgq/gqutils#readme"
 }
